# mlops-credit-risk

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
artifacts/: model.pkl
scripts/: merge_data.py  train_baseline.py
src/data/: load_data.py
src/features/: preprocess.py
tests/: test_api.py  test_data.py  test_preprocess.py
