[project]
name = "mlops-credit-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "mlflow>=3.1.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.6.1",
]
[tool.pytest.ini_options]
pythonpath = ["."]
