[project]
name = "mlops-credit-risk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "mlflow>=3.1.4",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.6.1",
    "uvicorn>=0.39.0",
]
[tool.pytest.ini_options]
pythonpath = ["."]
